--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ django==2.2.16
 django-filter~=21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+drf-extra-fields==3.1.1
 gunicorn==20.0.4
 psycopg2-binary==2.8.6
 PyJWT==2.1.0
