--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,7 @@
 FROM python:3.7-slim
-
-WORKDIR /app
-
-COPY . .
-
-RUN pip3 install -r requirements.txt --no-cache-dir
-
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ] 
+WORKDIR /code
+COPY requirements.txt .
+RUN apt-get update && apt-get upgrade -y && \
+    pip install --upgrade pip && pip install -r requirements.txt
+COPY . ./
+CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
