--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ COPY requirements.txt .
 RUN apt-get update && apt-get upgrade -y && \
     pip install --upgrade pip && pip install -r requirements.txt
 COPY . ./
-CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
+CMD gunicorn api_final.wsgi:application --bind 0.0.0.0:8000
