--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     image: kirviza/foodgram_backend:latest
     restart: always
     volumes:
-      - data_value:/code/data/
-      - static_value:/code/static/
-      - media_value:/code/media/
+      - data_value:/app/data/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
