--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7-slim
-WORKDIR /code
+WORKDIR /app
 COPY requirements.txt .
 RUN apt-get update && apt-get upgrade -y && \
     pip install --upgrade pip && pip install -r requirements.txt
