--- a/infra/default.conf
+++ b/infra/default.conf
@@ -5,12 +5,12 @@ server {
     server_tokens off;
     client_max_body_size 20M;
 
-    location /static/admin/ {
-        root /var/html/;
+    location /static/ {
+        alias /app/static/;
     }
 
     location /media/ {
-        root /var/html/;
+        alias /app/media/;
     }
 
     location /static/rest_framework/ {
