--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -36,8 +36,8 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - frontend
 
