--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     restart: always
     volumes:
       - data_value:/app/data/
-      - static_value:/app/static/
+      - static_value:/app/static_backend/
       - media_value:/app/media/
     depends_on:
       - db
@@ -36,8 +36,8 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/var/html/static_backend/
+      - media_value:/var/html/media/
     depends_on:
       - frontend
 
