--- a/infra/default.conf
+++ b/infra/default.conf
@@ -5,12 +5,12 @@ server {
     server_tokens off;
     client_max_body_size 20M;
 
-    location /static/ {
-        alias /app/static/;
+    location /static_backend/ {
+        root /var/html/;
     }
 
     location /media/ {
-        alias /app/media/;
+        root /var/html/;
     }
 
     location /static/rest_framework/ {
